# gamechanger-parser

./: pyproject.toml
config/: jupyter_server_config.py  test.ipynb
parsers/: field_names.py  file_utils.py  html_utils.py  init_doc.py  ocr.py  ocr_utils.py  paragraphs.py  parse.py  pdf_reader.py  post_process.py  reading_in.py
parsers/entity_extraction/: entities.py  entities_utils.py
parsers/keyword_extraction/: keywords.py  rake.py
parsers/ranking/: rank.py
parsers/reference_extraction/: reference_regexes.py
parsers/section_parse/parsers/: cjcs_parser.py  eo_parser.py  navy_parser.py  parser_definition.py  parser_factory.py
parsers/section_parse/parsers/utils/: dod_utils.py  navy_utils.py  shared_utils.py
parsers/static_data/: data_paths.py
parsers/topic_extraction/: .gitignore  tfidf.py  topic_modeling.py  topics.py
parsers/utils/: dod_text.py  text_utils.py
